# paircode

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
diary/: 001-step-a-architecture.md  002-v0.10-release-pipeline.md  003-arch-b-pivot-grappling.md
maybe-later/: pattern_poc.py
maybe-later/example_patterns/: build.yaml
scripts/: pattern_poc.py  release.py
scripts/example_patterns/: test.yaml
src/paircode/: __init__.py  __main__.py  cli.py  converge.py  detect.py  drive.py  gates.py  handshake.py  installer.py  journey.py  peerlab.py  runner.py  seal.py  state.py  util.py
src/paircode/templates/: FOCUS.md  JOURNEY.md  claude_peer_agent.md  claude_slash_command.md  codex_rules.md  codex_slash_command.md  gemini_slash_command.toml  peers.yaml
src/paircode/templates/claude/commands/: paircode.md  peerlab.md
src/paircode/templates/codex/commands/: paircode.md
tests/: test_cli_smoke.py  test_converge.py  test_drive.py  test_gates.py  test_peerlab.py  test_seal.py  test_smoke.py  test_state.py
